testing/enonic-xp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: enonic-xp
  labels:
    app: enonic-xp
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    protocol: TCP
    name: https
  selector:
    app: enonic-xp
