testing/enonic-xp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: enonic-xp
  annotations:
    kubernetes.io/ingress.global-static-ip-name: xp-diego-cloud-ip
    #kubernetes.io/ingress.class: "nginx"
  labels:
    app: enonic-xp
spec:
  backend:
    serviceName: enonic-xp
    servicePort: 80
